Functional add book;  toggle read; remove book

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     </head>
     <body>
         <div id="main" class="main">
+            <h3>Library prototype</h3>
             <div id="topmenu" class="menu">
                 <div class="bookInput">
                     Title: <input type="text" id="inputTitle">
@@ -14,10 +15,10 @@
                     Author: <input type="text" id="inputAuthor">
                 </div>
                 <div class="bookInput">
-                    Pages: <input type="number" id="idPages">
+                    Pages: <input type="number" id="inputPages" min=0>
                 </div>
                 <div class="bookInput">
-                    Read: <input type="checkbox" id="idRead">
+                    Already read: <input type="checkbox" id="inputIsRead">
                 </div>
                 <div>
                     <button type=button id="newBookBtn">Add Book</button>
