WIP : library local storage , currently does not work

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     </head>
     <body>
         <div id="main" class="main">
-            <h3>Library prototype</h3>
+            <h3>Library prototype, as per the exercise from <a href="https://www.theodinproject.com/">The Odin Project</a></h3>
             <div id="topmenu" class="menu">
                 <div class="bookInput">
                     Title: <input type="text" id="inputTitle">
@@ -22,6 +22,9 @@
                 </div>
                 <div>
                     <button type=button id="newBookBtn">Add Book</button>
+                </div>
+                <div>
+                    <button type=button id="saveBtn">Save library locally</button>
                 </div>
             </div>
             <div id="catalog" class="catalog">
